--- a/.env.example
+++ b/.env.example
@@ -2,3 +2,4 @@ GMAIL_CLIENT_ID=
 GMAIL_CLIENT_SECRET=
 GMAIL_REDIRECT_URI=http://localhost:4000/oauth2/callback
 PORT=4000
+GOOGLE_GENERATIVE_AI_API_KEY=
