--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "license": "ISC",
   "packageManager": "pnpm@10.14.0",
   "dependencies": {
-    "@ai-sdk/openai": "^2.0.77",
+    "@ai-sdk/google": "^2.0.44",
     "@aws-sdk/client-dynamodb": "^3.946.0",
     "@aws-sdk/client-s3": "^3.946.0",
     "@aws-sdk/lib-dynamodb": "^3.946.0",
