feat: Add ElevenLabs Text-to-Speech integration, refine Gmail unread message query, and introduce local development scripts.

--- a/.env.example
+++ b/.env.example
@@ -3,3 +3,6 @@ GMAIL_CLIENT_SECRET=
 GMAIL_REDIRECT_URI=http://localhost:4000/oauth2/callback
 PORT=4000
 GOOGLE_GENERATIVE_AI_API_KEY=
+ELEVENLABS_API_KEY=
+ELEVENLABS_VOICE_ID=your_voice_id_here
+ELEVENLABS_MODEL_ID=eleven_turbo_v2_5
