feat: Update Eleven Labs API client, integrate Google Generative AI for summarization, and add AWS SSM client.

--- a/package.json
+++ b/package.json
@@ -16,10 +16,11 @@
     "@ai-sdk/google": "^2.0.44",
     "@aws-sdk/client-dynamodb": "^3.946.0",
     "@aws-sdk/client-s3": "^3.946.0",
+    "@aws-sdk/client-ssm": "^3.946.0",
     "@aws-sdk/lib-dynamodb": "^3.946.0",
     "@aws-sdk/s3-request-presigner": "^3.946.0",
+    "@elevenlabs/elevenlabs-js": "^2.26.0",
     "ai": "^5.0.107",
-    "elevenlabs": "^1.59.0",
     "express": "^5.2.1",
     "googleapis": "^167.0.0",
     "twilio": "^5.10.7",
