docs: Add Twilio and call-related environment variables to .env.example.

--- a/.env.example
+++ b/.env.example
@@ -6,3 +6,7 @@ GOOGLE_GENERATIVE_AI_API_KEY=
 ELEVENLABS_API_KEY=
 ELEVENLABS_VOICE_ID=your_voice_id_here
 ELEVENLABS_MODEL_ID=eleven_turbo_v2_5
+TWILIO_ACCOUNT_SID=
+TWILIO_AUTH_TOKEN=
+TWILIO_FROM_NUMBER=
+CALL_TO_NUMBER=
