feat: Implement retry logic for email summarization with tool call enforcement and add a Lambda test script.

--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "cdk": "cdk",
     "cdk:synth": "cdk synth",
     "cdk:deploy": "cdk deploy",
-    "cdk:diff": "cdk diff"
+    "cdk:diff": "cdk diff",
+    "test": "aws lambda invoke --function-name AiInboxBriefingStack-DailyFn064080AD-IbYaCVg3Y5Gr --region us-west-1 /tmp/response.json && cat /tmp/response.json"
   },
   "keywords": [],
   "author": "",
